packages/block-library/src/section/theme.scss
.wp-block-section {
	padding: 1rem 2rem;

	&.has-background {
		margin-top: 0;
		margin-bottom: 0;
	}
}

