Utilise correct spacing variable for consistency

--- a/packages/block-library/src/section/theme.scss
+++ b/packages/block-library/src/section/theme.scss
@@ -1,5 +1,5 @@
 .wp-block-section {
-	padding: 1rem 2rem;
+	padding: $block-padding;
 
 	&.has-background {
 		margin-top: 0;
